More on Observed fluxes

--- a/mythesis.tex
+++ b/mythesis.tex
@@ -655,59 +655,60 @@ The solid angle measured at infinity is then \cite{morsink}
 In case of stars with lower compactness (weak gravity) $\rg \ll R$, so $u\ll 1$, and this gives
 the usual formula $\d\Omega=\d S' \cos \sigma'/D^2$. 
 
-The combined effect of the gravitational redshift and Doppler effect
-results in the following  relation between the monochromatic
-observed and local intensities (see e.g. Misner et. al. 1973 \cite{mtw} or Rybicki \& Lightman 1979 \cite{rybicki})%\citep[see e.g.][]{mtw73,rl79}:
+%The combined effect of the gravitational redshift and Doppler effect
+%results in the following  relation between the monochromatic
+%observed and local intensities
+
+We have now obtained the solid angle $\d\Omega$ needed to calculate the flux from our spot with equation \ref{eq:dF_E2}. However we still need to find out a expression for intensity $I_{E}$. Also the intensity is different in the static frame (of the distant observer) and in the local frame comoving with the spot due to both gravitational redshift and Doppler effect. The relation between monochromatic observed and local intensities is (see e.g. Misner et. al. 1973 \cite{mtw} or Rybicki \& Lightman 1979 \cite{rybicki})%\citep[see e.g.][]{mtw73,rl79}:
 \be
 I_{E} = \left (\frac{E}{E'}\right )^3 I'_{E '} (\sigma')
 \ee
-where $E/E'=\Dop \sqrt{1-u}$.
-Here $I'_{E'}(\sigma')$ is the intensity computed in the frame comoving with
-the spot.
-For the bolometric intensity, one gets
-\be
+where $E/E'=\Dop \sqrt{1-u}$. Here $I'_{E'}(\sigma')$ is the intensity computed in the corotating frame. The dependence of redshift ($1+z = 1/\sqrt{1-u}$) to the power of 3 can be understood by noting that $I_{E} \propto \nu^{3}$ and $\nu = \nu'(1+z)^{-1}$.
+For the bolometric intensity the dependence on frequency goes to $\nu^{4}$ and one gets
+\be \label{eq:bolointensity}
 I= \left (\Dop \sqrt{1-u} \right )^4 I'(\sigma') .
 \ee
 
-The observed spectral flux (eq.~\ref{eq:dF_E2}) now reads
+The observed spectral flux (eq.~\ref{eq:dF_E2}) is now given by
 \be \label{eq:fluxspot2}
-F_{E}=(1-u)^{1/2} \Dop^{4} I'_{E'}(\sigma') \cos\sigma
+\d F_{E}=(1-u)^{1/2} \Dop^{4} I'_{E'}(\sigma') \cos\sigma
 \frac{\d \cos\alpha}{\d\cos\psi}
  \frac{\d S'}{D^2} ,
 \ee
 where we have used the aberration formula (\ref{eq:aberr2}).
-The bolometric flux is given by:
+The bolometric flux reads:
 \be  \label{eq:fluxbolo2}
-F= (1-u)\ \Dop^5 \
+\d F= (1-u)\ \Dop^5 \
 I'(\sigma')  \cos\sigma \frac{\d\cos\alpha}{\d\cos\psi} \frac{\d S'}{D^2} .
 \ee
-The radiation spectrum can be e.g. a black body spectrum or a power-law. If it can be represented by
-a power-law $I'_{E'}(\sigma') \propto E '^{-(\Gamma-1)}$
-with a photon spectral index
-$\Gamma$ which does not depend on the angle $\sigma'$ then
+The radiation spectrum can be e.g. a blackbody or a power-law spectrum. We can take for example a power-law $I'_{E'}(\sigma') \propto E '^{-(\Gamma-1)}$, which does not depend on the angle $\sigma'$. Here $\Gamma$ is the photon spectral index. With this spectrum we get
 \be \label{eq:int_trans2}
 I'_{E'}(\sigma') = I'_{E}(\sigma')
 \left( \Dop \sqrt{1-u} \right)^{\Gamma-1} .
 \ee
-The observed spectral flux at a distance $D$ from the star is then given by 
+The observed spectral flux %at a distance $D$ from the star 
+may be then expressed by 
 \be\label{eq:fluxplaw2}
- F_{E}= (1-u)^{\Gamma/2}\ \Dop^{\Gamma+3} I'_E(\sigma')
+\d F_{E}= (1-u)^{\Gamma/2}\ \Dop^{\Gamma+3} I'_E(\sigma')
 \cos\sigma\ \frac{\d\cos\alpha}{\d\cos\psi}\ \frac{\d S'}{D^2}.
 \ee
-Expression for the bolometric flux (\ref{eq:fluxbolo2})
-may be obtained as a special case of Eq.~(\ref{eq:fluxplaw2}) by setting $\Gamma=2$. 
+We can notice that the equation for the bolometric flux (\ref{eq:fluxbolo2})
+can be obtained as a special case of Eq.~(\ref{eq:fluxplaw2}) by setting $\Gamma=2$. 
 
-Thus, the bolometric flux from a rapidly rotating star differs by a factor  $\Dop^5$
-from that for a slowly rotating star. Two powers of $\Dop$ come
-from the solid angle transformation, one from the energy, one from the
-photon arrival time contraction,
-and the fifth from the change in the projected  area due to  aberration.
-Aberration may also change the specific intensity since it has to be computed
-for angle $\sigma'$ in the comoving frame. 
+Let us look the expression (\ref{eq:fluxbolo2}) for bolometric flux more carefully. We see that there is a difference by a factor $\Dop^5$ between the flux from a rapidly rotating star and that from a slowly rotating star. One power of the Doppler factor came from the change in the projected area due to aberration as we have already mentioned. From the four other powers of Doppler factor (appearing in the equation \ref{eq:bolointensity}) two comes from the solid angle transformation, one from the energy and one from the time contraction of photon arrival (Rybicki \& Lightman 1979 \cite{rybicki}). In the case of spectral flux (equation \ref{eq:fluxspot2}) there is no Doppler factor from the energy and thus one power less.
 
-However in the most simple model we may assume that the intensity is independent of $\sigma'$ ("isotropic beaming"). In a little more realistic case one can assume the intensity to be a multiplication of an angle-dependent ("beaming function") and an energy-dependent function.
 
-Thanks to the observed AMXPs (e.g. SAX J1808.4-3658 \cite{poutagierlinskisax}) we know that the spectrum of the pulsar (i.e. the energy-dependence of $I'_{E'}(\sigma')$ ) can be fitted with a blackbody component at lower energies and with a power-law component at higher energies. However in the case of SAX J1808.4-3658 the blackbody contributes only about 30 per cent to the flux even in the 3-5 keV region (which are near the lowest observed energies) \cite{poutagierlinskisax}. Thus we can approximate the spectrum with two different power-laws on both sides of a cut-off energy, which is defined to be at the maximum flux of a blackbody with a temperature of 2 keV (in the frame of the spot). Below the cut-off energy we use Rayleigh-Jeans law and above the cut-off a descending power-law. The power-law is normalized to be equal with the named blackbody at 1 keV. This is shown in the Figure \ref{fig:spectrum}.
+%Two powers of $\Dop$ come
+%from the solid angle transformation, one from the energy, one from the
+%photon arrival time contraction,
+%and the fifth from the change in the projected  area due to  aberration.
+%Aberration may also change the specific intensity since it has to be computed
+%for angle $\sigma'$ in the comoving frame. 
+
+As mentioned the most simple model we may assume that the intensity is independent of $\sigma'$ ("isotropic beaming"). In a little more general case one can assume the intensity to be a multiplication of an angle-dependent ("beaming function") and an energy-dependent function. The beaming function describes what are directions where most of the intensity is emitted and the function might have e.g. a polynomial shape.  
+
+
+Thanks to the observed AMXPs (e.g. SAX J1808.4-3658 \cite{poutagierlinskisax}) we know that the spectrum of the pulsar (i.e. the energy-dependence of $I'_{E'}(\sigma')$ ) might be fitted with a blackbody component at lower energies and with a power-law component at higher energies. However in the case of SAX J1808.4-3658 the blackbody contributes only about 30 per cent to the flux even in the 3-5 keV region (which are near the lowest observed energies) \cite{poutagierlinskisax}. Thus we can approximate the spectrum with two different power-laws on both sides of a cut-off energy, which is defined to be at the maximum flux of a blackbody with a temperature of 2 keV (in the frame of the spot). Below the cut-off energy we use Rayleigh-Jeans law and above the cut-off a descending power-law. The power-law is normalized to be equal with the named blackbody at 1 keV. This model of spectrum is shown in the Figure \ref{fig:spectrum}.
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -719,10 +720,10 @@ Thanks to the observed AMXPs (e.g. SAX J1808.4-3658 \cite{poutagierlinskisax}) w
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 
-In a more realistic model we would calculate the fluxes using two overlapping spots. The other spot would produce blackbody emission with isotropic beaming and the other one the power-law emission and with e.g. a linear dependence on the beaming angle (representing the accretion shock). The spots may have different shapes and sizes. This model will be added to the pulse profile code in the near future.
+In a more realistic model we would calculate the fluxes using two overlapping spots. The other spot would produce blackbody emission with isotropic beaming and the other one the power-law emission and with e.g. a linear dependence on the beaming angle $\sigma'$ (representing the accretion shock). The spots may have different shapes and sizes. This model will be added to the pulse profile code in the near future.
 
 
-In the actual calculation of the flux, we make again a grid of values of the derivatives $\frac{\d\cos\psi}{\d\cos\alpha}$ (same as $(\frac{\d\cos\alpha}{\d\cos\psi})^{-1}$) with different $\alpha$ and $r$. The derivatives for each point are found by interpolating. 
+In the calculations of this thesis we use spectral number fluxes, since those are the fluxes we get from the observations. We must thus divide the fluxes we get from equation (\ref{eq:fluxspot2}) with the observed energy $E$. When calculating the flux, we make again a grid of values of the derivatives $\frac{\d\cos\psi}{\d\cos\alpha}$ (same as $(\frac{\d\cos\alpha}{\d\cos\psi})^{-1}$) with different $\alpha$ and $r$. The derivatives for each point are found by interpolating. 
 
 
 \subsubsection{Time delays}
